--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               onclick="showServices('AC Repair Services')"
             >
               <img
-                src="https://via.placeholder.com/30"
+                src="ac icon.png"
                 class="w-8 h-8 rounded object-cover"
                 alt="AC"
               />
@@ -283,7 +283,7 @@
               onclick="showServices('Electrical Services')"
             >
               <img
-                src="https://via.placeholder.com/30"
+                src="electric icon.png"
                 class="w-8 h-8 rounded object-cover"
                 alt="Electrical"
               />
@@ -294,7 +294,7 @@
               onclick="showServices('Plumbing Services')"
             >
               <img
-                src="https://via.placeholder.com/30"
+                src="Plumbing icon.png"
                 class="w-8 h-8 rounded object-cover"
                 alt="Plumbing"
               />
@@ -642,7 +642,7 @@
                 class="swiper-slide bg-white p-5 rounded-2xl shadow-md transition transform hover:scale-105 flex flex-col items-center"
               >
                 <img
-                  src="https://via.placeholder.com/500x300"
+                  src="ac banner.jpg"
                   class="rounded-xl w-full h-64 object-cover mb-4"
                   alt="AC Repair"
                 />
@@ -656,7 +656,7 @@
                 class="swiper-slide bg-white p-5 rounded-2xl shadow-md transition transform hover:scale-105 flex flex-col items-center"
               >
                 <img
-                  src="https://via.placeholder.com/500x300"
+                  src="electric banner.jpg"
                   class="rounded-xl w-full h-64 object-cover mb-4"
                   alt="Electrical"
                 />
@@ -670,7 +670,7 @@
                 class="swiper-slide bg-white p-5 rounded-2xl shadow-md transition transform hover:scale-105 flex flex-col items-center"
               >
                 <img
-                  src="https://via.placeholder.com/500x300"
+                  src="Plumbing banner.jpg"
                   class="rounded-xl w-full h-64 object-cover mb-4"
                   alt="Plumbing"
                 />
@@ -774,8 +774,8 @@
         <!-- Service Card -->
         <div class="min-w-[130px] md:min-w-[180px] flex-shrink-0">
           <img
-            src="https://via.placeholder.com/200x150"
-            class="w-full h-28 md:h-40 object-cover rounded-xl shadow"
+            src="ac icon.png"
+            class="w-full h-28 md:h-40 object-fit: cover rounded-xl shadow"
             alt="AC Servicing"
           />
           <p
@@ -855,8 +855,8 @@
         <!-- Service Card -->
         <div class="min-w-[130px] md:min-w-[180px] flex-shrink-0">
           <img
-            src="https://via.placeholder.com/200x150"
-            class="w-full h-28 md:h-40 object-cover rounded-xl shadow"
+            src="electric icon.png"
+            class="w-full h-28 md:h-40 object-fit: cover rounded-xl shadow"
             alt="Electrician"
           />
           <p
@@ -869,8 +869,8 @@
         <!-- Service Card -->
         <div class="min-w-[130px] md:min-w-[180px] flex-shrink-0">
           <img
-            src="https://via.placeholder.com/200x150"
-            class="w-full h-28 md:h-40 object-cover rounded-xl shadow"
+            src="Plumbing icon.png"
+            class="w-full h-28 md:h-40 object-fit: cover rounded-xl shadow"
             alt="Plumber"
           />
           <p
