--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
               </li>
               <li>
                 <a
+                  href="event.html"
+                  class="block px-4 py-2 hover:bg-blue-100"
+                >
+                  Event Manegment
+                </a>
+              </li>
+              <li>
+                <a
                   href="Plumbing.html"
                   class="block px-4 py-2 hover:bg-blue-100"
                 >
@@ -1201,3 +1209,4 @@
     </footer>
   </body>
 </html>
+
