--- a/index.html
+++ b/index.html
@@ -310,22 +310,11 @@
               onclick="showServices('Event services')"
             >
               <img
-                src="Plumbing icon.png"
+                src="download.jfif"
                 class="w-8 h-8 rounded object-cover"
                 alt="Plumbing"
               />
               <span>Event Manegment</span>
-            </li>
-            <li
-              class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
-              onclick="showServices('Cleaning Services')"
-            >
-              <img
-                src="https://via.placeholder.com/30"
-                class="w-8 h-8 rounded object-cover"
-                alt="Event"
-              />
-              <span>Cleaning Services</span>
             </li>
           </ul>
         </div>
@@ -437,31 +426,11 @@
           ];
         }
 
-        if (title === "Cleaning Services") {
-          services = [
-            {
-              name: "Home Deep Cleaning",
-              img: "https://via.placeholder.com/50?text=J",
-              link: "home-clean.html",
-            },
-            {
-              name: "Office Cleaning",
-              img: "https://via.placeholder.com/50?text=K",
-              link: "office-clean.html",
-            },
-          ];
-        }
-
         if (title === "Event services") {
           services = [
             {
               name: "Corporate Events",
-              img: "https://via.placeholder.com/50?text=J",
-              link: "event.html",
-            },
-            {
-              name: "Office Cleaning",
-              img: "https://via.placeholder.com/50?text=K",
+              img: "download (1).jfif",
               link: "event.html",
             },
           ];
@@ -726,42 +695,17 @@
               </div>
 
               <!-- Extra Services (just copy-paste for more) -->
-              <div
-                class="swiper-slide bg-white p-5 rounded-2xl shadow-md transition transform hover:scale-105 flex flex-col items-center"
-              >
-                <img
-                  src="https://via.placeholder.com/500x300"
-                  class="rounded-xl w-full h-64 object-cover mb-4"
-                  alt="Painting"
-                />
-                <h3 class="font-bold text-lg md:text-xl text-gray-800">
-                  Painting Services
-                </h3>
-              </div>
 
               <div
                 class="swiper-slide bg-white p-5 rounded-2xl shadow-md transition transform hover:scale-105 flex flex-col items-center"
               >
                 <img
-                  src="https://via.placeholder.com/500x300"
+                  src="download (1).jfif"
                   class="rounded-xl w-full h-64 object-cover mb-4"
-                  alt="Painting"
+                  alt="event management"
                 />
                 <h3 class="font-bold text-lg md:text-xl text-gray-800">
-                  Painting Services
-                </h3>
-              </div>
-
-              <div
-                class="swiper-slide bg-white p-5 rounded-2xl shadow-md transition transform hover:scale-105 flex flex-col items-center"
-              >
-                <img
-                  src="https://via.placeholder.com/500x300"
-                  class="rounded-xl w-full h-64 object-cover mb-4"
-                  alt="Carpentry"
-                />
-                <h3 class="font-bold text-lg md:text-xl text-gray-800">
-                  Carpentry Services
+                  Event management
                 </h3>
               </div>
             </div>
@@ -834,42 +778,42 @@
         <!-- Service Card -->
         <div class="min-w-[130px] md:min-w-[180px] flex-shrink-0">
           <img
-            src="https://via.placeholder.com/200x150"
+            src="electric icon.png"
             class="w-full h-28 md:h-40 object-cover rounded-xl shadow"
-            alt="Salon Care"
+            alt="electric"
           />
           <p
             class="text-sm md:text-base font-medium text-gray-800 text-center mt-2"
           >
-            Salon Care
+            Electrician
           </p>
         </div>
 
         <!-- Service Card -->
         <div class="min-w-[130px] md:min-w-[180px] flex-shrink-0">
           <img
-            src="https://via.placeholder.com/200x150"
+            src="Plumbing icon.png"
             class="w-full h-28 md:h-40 object-cover rounded-xl shadow"
-            alt="Home Cleaning"
+            alt="Plumber"
           />
           <p
             class="text-sm md:text-base font-medium text-gray-800 text-center mt-2"
           >
-            Home Cleaning
+            Plumber
           </p>
         </div>
 
         <!-- Service Card -->
         <div class="min-w-[130px] md:min-w-[180px] flex-shrink-0">
           <img
-            src="https://via.placeholder.com/200x150"
+            src="download.jfif"
             class="w-full h-28 md:h-40 object-cover rounded-xl shadow"
-            alt="Carpet Cleaning"
+            alt="Event management"
           />
           <p
             class="text-sm md:text-base font-medium text-gray-800 text-center mt-2"
           >
-            Carpet Cleaning
+            Event management
           </p>
         </div>
       </div>
@@ -929,28 +873,28 @@
         <!-- Service Card -->
         <div class="min-w-[130px] md:min-w-[180px] flex-shrink-0">
           <img
-            src="https://via.placeholder.com/200x150"
+            src="download.jfif"
             class="w-full h-28 md:h-40 object-cover rounded-xl shadow"
-            alt="Painter"
+            alt="event management"
           />
           <p
             class="text-sm md:text-base font-medium text-gray-800 text-center mt-2"
           >
-            Painter
+            Event management
           </p>
         </div>
 
         <!-- Service Card -->
         <div class="min-w-[130px] md:min-w-[180px] flex-shrink-0">
           <img
-            src="https://via.placeholder.com/200x150"
+            src="ac icon.png"
             class="w-full h-28 md:h-40 object-cover rounded-xl shadow"
-            alt="Appliance Repair"
+            alt="Ac Repair"
           />
           <p
             class="text-sm md:text-base font-medium text-gray-800 text-center mt-2"
           >
-            Appliance Repair
+            Ac Repair
           </p>
         </div>
       </div>
@@ -1152,7 +1096,7 @@
         <!-- Bottom Image Banner -->
         <div class="mt-10">
           <img
-            src="https://images.unsplash.com/photo-1584367369853-8b966cf2234e?q=80&w=1600&auto=format&fit=crop"
+            src="Our safety-first team.png"
             alt="Our safety-first team"
             class="w-full rounded-2xl shadow-md object-cover h-52 md:h-72"
           />
