--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
     </header>
 
-    <!-- Header (Visible on mobile + tablet, hidden on PC) -->
+    <<!-- Header (Visible on mobile + tablet, hidden on PC) -->
     <div
       class="flex items-center justify-between p-3 bg-white border-b border-gray-200 lg:hidden sticky top-0 z-50"
       x-data="{ menuOpen: false }"
@@ -274,7 +274,8 @@
           <ul id="categories" class="flex flex-col">
             <li
               class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
-              onclick="showServices('AC Repair Services')"
+              onclick="showServices(this, 'AC Repair Services')"
+              data-link="ac-repair.html"
             >
               <img
                 src="ac icon.png"
@@ -285,7 +286,8 @@
             </li>
             <li
               class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
-              onclick="showServices('Electrical Services')"
+              onclick="showServices(this, 'Electrical Services')"
+              data-link="electrical.html"
             >
               <img
                 src="electric icon.png"
@@ -296,7 +298,8 @@
             </li>
             <li
               class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
-              onclick="showServices('Plumbing Services')"
+              onclick="showServices(this, 'Plumbing Services')"
+              data-link="plumbing.html"
             >
               <img
                 src="Plumbing icon.png"
@@ -307,12 +310,13 @@
             </li>
             <li
               class="p-4 flex items-center space-x-2 cursor-pointer hover:bg-gray-200"
-              onclick="showServices('Event services')"
+              onclick="showServices(this, 'Event services')"
+              data-link="event.html"
             >
               <img
                 src="download.jfif"
                 class="w-8 h-8 rounded object-cover"
-                alt="Plumbing"
+                alt="Event"
               />
               <span>Event Manegment</span>
             </li>
@@ -333,6 +337,7 @@
       const sidebar = document.getElementById("mobile-sidebar");
       const overlay = document.getElementById("overlay");
       const servicesTitle = document.getElementById("services-title");
+      let activeCategory = null;
 
       function toggleMenu() {
         sidebar.classList.toggle("hidden");
@@ -348,7 +353,30 @@
       closeBtn.addEventListener("click", toggleMenu);
       overlay.addEventListener("click", toggleMenu);
 
-      function showServices(title) {
+      function showServices(element, title) {
+        // Restore previous category if changed
+        if (activeCategory && activeCategory !== element) {
+          activeCategory.innerHTML = activeCategory.dataset.original;
+        }
+
+        // Save original HTML if not saved before
+        if (!element.dataset.original) {
+          element.dataset.original = element.innerHTML;
+        }
+
+        // Replace with "Visit Page" button
+        element.innerHTML = `
+      <button 
+        onclick="window.location.href='${element.dataset.link}'" 
+        class="w-full bg-blue-500 text-white py-2 rounded-lg font-semibold hover:bg-blue-600 transition">
+        Visit Page
+      </button>
+    `;
+
+        // Set as active
+        activeCategory = element;
+
+        // Keep your existing sub-services logic
         let services = [];
 
         if (title === "AC Repair Services") {
@@ -415,21 +443,6 @@
           services = [
             {
               name: "Corporate Events",
-              img: "https://via.placeholder.com/50?text=J",
-              link: "event.html",
-            },
-            {
-              name: "Office Cleaning",
-              img: "https://via.placeholder.com/50?text=K",
-              link: "event.html",
-            },
-          ];
-        }
-
-        if (title === "Event services") {
-          services = [
-            {
-              name: "Corporate Events",
               img: "download (1).jfif",
               link: "event.html",
             },
@@ -441,44 +454,16 @@
 
         // update list
         const servicesList = document.getElementById("services-list");
-
-        // Find category image
-        let categoryImage = "";
-        if (title === "AC Repair Services") {
-          categoryImage = "ac icon.png";
-        } else if (title === "Electrical Services") {
-          categoryImage = "electric icon.png";
-        } else if (title === "Plumbing Services") {
-          categoryImage = "Plumbing icon.png";
-        } else if (title === "Event services") {
-          categoryImage = "download.jfif";
-        }
-
-        // Top section: image + visit page button
-        const categoryTop = `
-  <div class="relative mb-4">
-    <img src="${categoryImage}" class="w-full h-32 object-cover rounded-lg">
-    <a href="${title.toLowerCase().replace(/\s+/g, "-")}.html"
-       class="absolute inset-x-0 bottom-2 mx-auto w-32 text-center bg-blue-500 text-white py-1 rounded-lg font-semibold hover:bg-blue-600 transition">
-      Visit Page
-    </a>
-  </div>
-`;
-
-        // Service items
-        const serviceItems = services
+        servicesList.innerHTML = services
           .map(
             (s) => `
-      <a href="${s.link}" class="flex items-center space-x-3 py-3 border-b cursor-pointer hover:bg-gray-50 transition">
-        <img src="${s.img}" class="w-12 h-12 rounded-md object-cover" alt="${s.name}">
-        <span class="font-medium text-gray-800">${s.name}</span>
-      </a>
-    `
+        <a href="${s.link}" class="flex items-center space-x-3 py-3 border-b cursor-pointer hover:bg-gray-50 transition">
+          <img src="${s.img}" class="w-12 h-12 rounded-md object-cover" alt="${s.name}">
+          <span class="font-medium text-gray-800">${s.name}</span>
+        </a>
+      `
           )
           .join("");
-
-        // Combine image+button + services
-        servicesList.innerHTML = categoryTop + serviceItems;
       }
     </script>
 
