--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
     </header>
 
-    <<!-- Header (Visible on mobile + tablet, hidden on PC) -->
+    <!-- Header (Visible on mobile + tablet, hidden on PC) -->
     <div
       class="flex items-center justify-between p-3 bg-white border-b border-gray-200 lg:hidden sticky top-0 z-50"
       x-data="{ menuOpen: false }"
@@ -1204,3 +1204,4 @@
     </footer>
   </body>
 </html>
+
